# connect4tu

./: .gitignore  README.md  example_metadata.yaml  metadata_model_upload_dataset.yaml  pyproject.toml  set_env_example.sh
connect4tu/: cli.py  env_utils.py  fetch.py  pyvenv.cfg  report.py  upload.py
